--- a/HelloWorldEclipse/res/layout/main.xml
+++ b/HelloWorldEclipse/res/layout/main.xml
@@ -4,10 +4,22 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-	android:id="@+id/myTextView"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+	<TextView  
+		android:id="@+id/hello"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:text="@string/hello"
+	    />
+	<Button  
+		android:id="@+id/myButton"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:text="Click me!"
+	    />        
+	<TextView  
+		android:id="@+id/content"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:text="Content changing on click"
+	    />    
 </LinearLayout>
