added @Extra, reformated the generated code, startActivity is now overriden to replace MyActivity with MyActivity_

--- a/HelloWorldEclipse/res/layout/my_activity.xml
+++ b/HelloWorldEclipse/res/layout/my_activity.xml
@@ -20,4 +20,11 @@
 	    android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content" 
 	    />    
+	    
+	 <Button  
+		android:id="@+id/startExtraActivity"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:text="Start extra activity !"
+	    />      
 </LinearLayout>
