added all Res types

--- a/HelloWorldEclipse/res/values/values.xml
+++ b/HelloWorldEclipse/res/values/values.xml
@@ -11,5 +11,7 @@
 		<item>pez espada</item>
 		<item>california maki</item>
 	</string-array>
+	
+	<bool name="someBoolean">true</bool>
 
 </resources>
