adding a ListActivity example

--- a/HelloWorldEclipse/res/layout/my_activity.xml
+++ b/HelloWorldEclipse/res/layout/my_activity.xml
@@ -28,4 +28,11 @@
 	    android:text="Start extra activity !"
 	    />
 	    
+	 <Button  
+		android:id="@+id/startListActivity"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:text="Start list activity !"
+	    />
+	    
 </LinearLayout>
