--- a/maveneclipse/res/layout/main.xml
+++ b/maveneclipse/res/layout/main.xml
@@ -4,9 +4,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+	<TextView  
+		android:id="@+id/helloTextView"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    />
 </LinearLayout>
