Added automatic functional tests to AndroidAnnotations. Fixes issue 51.

--- a/AndroidAnnotations/android-functional-test-1-5/res/layout/views_injected.xml
+++ b/AndroidAnnotations/android-functional-test-1-5/res/layout/views_injected.xml
@@ -5,9 +5,18 @@
     android:layout_height="fill_parent"
     >
 	<TextView  
-		android:id="@+id/helloTextView"
+		android:id="@+id/myTextView"
 	    android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content" 
-	    android:text="@string/hello"
 	    />
+	<TextView  
+		android:id="@+id/someView"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    />
+	<Button  
+		android:id="@+id/myButton"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    />	    
 </LinearLayout>
