Convention over configuration now takes care of camel case to snake case conversion. Fixes issue 111.

--- a/AndroidAnnotations/functional-test-1-5/res/layout/views_injected.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/views_injected.xml
@@ -22,7 +22,7 @@
     android:layout_height="fill_parent"
     >
 	<TextView  
-		android:id="@+id/myTextView"
+		android:id="@+id/my_text_view"
 	    android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content" 
 	    />
