--- a/AndroidAnnotations/functional-test-1-5/res/layout/clicks_handled.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/clicks_handled.xml
@@ -26,6 +26,12 @@
 	    android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content" 
 	    />
+
+	<Button  
+		android:id="@+id/snake_case_button"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    />
 	    
 	<Button  
 		android:id="@+id/extendedConventionButton"
