Added the ability to add multiple views ids on many annotations

--- a/AndroidAnnotations/functional-test-1-5/res/layout/clicks_handled.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/clicks_handled.xml
@@ -63,4 +63,14 @@
 	    android:layout_height="wrap_content" 
 	    />		    
 	    	    
+	<Button  
+		android:id="@+id/button1"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+    	/>		
+    <Button  
+		android:id="@+id/button2"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    />		
 </LinearLayout>
