Support for options items

--- a/AndroidAnnotations/functional-test-1-5/res/menu/my_menu.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/menu/my_menu.xml
@@ -28,4 +28,9 @@
     <item android:id="@+id/menu_share"
         android:title="Share"
       />
+    
+    <item android:id="@+id/menu_add"
+        android:title="Add"
+      />
+        
 </menu>
