Added new test on @ItemClick annotation that check arguments passed by generated sub class.

--- a/AndroidAnnotations/functional-test-1-5/res/layout/item_clicks_handled.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/item_clicks_handled.xml
@@ -26,11 +26,23 @@
 	    android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 	/>
-	
+
+	<Spinner
+	    android:id="@+id/spinnerWithArgument"
+	    android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+	/>
+
 	<ListView 
 	    android:id="@+id/listView"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	/>
-	
+
+	<ListView
+	    android:id="@+id/listViewWithArgument"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	/>
+
 </LinearLayout>
