--- a/AndroidAnnotations/functional-test-1-5/res/layout/item_clicks_handled.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/item_clicks_handled.xml
@@ -51,4 +51,10 @@
 	    android:layout_height="wrap_content"
 	/>	
 
+	<ListView 
+	    android:id="@+id/listViewWithOneParam"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	/>		
+	
 </LinearLayout>
