First implementation of @TextChange, @BeforeTextChange and @AfterTextChange annotations. (for more informations see #120)

--- a/AndroidAnnotations/functional-test-1-5/res/layout/main.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/main.xml
@@ -27,4 +27,10 @@
         android:layout_height="wrap_content"
         android:text="@string/hello" />
 
+    <EditText
+        android:id="@+id/watchedEditText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/hello" />
+
 </LinearLayout>
