--- a/AndroidAnnotations/functional-test-1-5/res/layout/clickable_widgets.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/clickable_widgets.xml
@@ -66,4 +66,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+		android:id="@+id/stackOverflowProofButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
