Introducing a new resName parameter in annotations to add library support. #20. #78

--- a/AndroidAnnotations/functional-test-1-5/res/layout/clickable_widgets.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/clickable_widgets.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-
     Copyright (C) 2010-2012 eBusiness Information, Excilys Group
 
     Licensed under the Apache License, Version 2.0 (the "License"); you may not
@@ -14,7 +13,6 @@
     WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
     License for the specific language governing permissions and limitations under
     the License.
-
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
@@ -67,7 +65,17 @@
         android:layout_height="wrap_content" />
 
     <Button
-		android:id="@+id/stackOverflowProofButton"
+        android:id="@+id/stackOverflowProofButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/libResButton1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/libResButton2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
