Allowing usage of multiple menus in OptionsMenu. #246

--- a/AndroidAnnotations/functional-test-1-5/res/menu/my_menu2.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/menu/my_menu2.xml
@@ -19,11 +19,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_refresh"
-        android:title="Refresh"/>
+        android:id="@+id/menu_share"
+        android:title="Share"/>
 
     <item
-        android:id="@+id/menu_search"
-        android:title="Search"/>
+        android:id="@+id/menu_add"
+        android:title="Add"/>
 
 </menu>
