--- a/AndroidAnnotations/functional-test-1-5/res/layout/item_clicks_handled.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/item_clicks_handled.xml
@@ -50,6 +50,12 @@
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 	/>
+
+	<ListView
+		android:id="@+id/listViewWithArgumentWithGenericWildcard"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+	/>
 	
 	<ListView 
 	    android:id="@+id/listViewWithPosition"
