Allow any order for @Touch annotated method's parameters

--- a/AndroidAnnotations/functional-test-1-5/res/layout/clickable_widgets.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/clickable_widgets.xml
@@ -56,7 +56,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
-    <Button
+	<Button
+		android:id="@+id/buttonWithOnlyViewArgument"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" />
+
+
+	<Button
         android:id="@+id/button1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
