--- a/AndroidAnnotations/functional-test-1-5/res/xml/settings.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/xml/settings.xml
@@ -16,18 +16,18 @@
     the License.
 
 -->
-<resources>
-    
-    <bool name="prefsDefaultBool">true</bool>
-    <string name="prefDefaultString">default pref</string>
-    <integer name="prefDefaultInt">42</integer>
-    <integer name="prefDefaultLong">4200</integer>
-    <integer name="prefDefaultFloat">42</integer>
-    <string name="prefStringKey">stringKey</string>
-    
-    <string name="conventionKey">conventionKey</string>
-    <string name="listPreferenceKey">listPreferenceKey</string>
-    <string name="checkBoxPrefKey">checkBoxPrefKey</string>
-    <string name="switchPrefKey">switchPrefKey</string>
-    
-</resources>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <PreferenceCategory >
+        <ListPreference
+            android:key="@string/listPreferenceKey"/>
+
+        <EditTextPreference
+            android:key="@string/conventionKey" />
+        
+        <CheckBoxPreference android:key="@string/checkBoxPrefKey"/>
+        
+        <SwitchPreference android:key="@string/switchPrefKey"/>
+    </PreferenceCategory>
+
+</PreferenceScreen>
