Test @PreferenceChange parsed newValue param

--- a/AndroidAnnotations/functional-test-1-5/res/xml/settings.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/xml/settings.xml
@@ -25,6 +25,9 @@
         <EditTextPreference
             android:key="@string/conventionKey" />
         
+        <EditTextPreference
+            android:key="@string/editTextPrefKey" />
+        
         <CheckBoxPreference android:key="@string/checkBoxPrefKey"/>
         
         <SwitchPreference android:key="@string/switchPrefKey"/>
