--- a/AndroidAnnotations/functional-test-1-5/res/values/values.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/values/values.xml
@@ -26,6 +26,7 @@
     <string name="prefStringKey">stringKey</string>
     
     <string name="conventionKey">conventionKey</string>
+    <string name="editTextPrefKey">editTextPrefKey</string>
     <string name="listPreferenceKey">listPreferenceKey</string>
     <string name="checkBoxPrefKey">checkBoxPrefKey</string>
     <string name="switchPrefKey">switchPrefKey</string>
