add test for subclass parameters on @PreferenceClick and @PreferenceChange

--- a/AndroidAnnotations/functional-test-1-5/res/values/values.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/values/values.xml
@@ -29,6 +29,7 @@
     <string name="editTextPrefKey">editTextPrefKey</string>
     <string name="listPreferenceKey">listPreferenceKey</string>
     <string name="checkBoxPrefKey">checkBoxPrefKey</string>
+    <string name="checkBoxWithCastPrefKey">checkBoxWithCastPrefKey</string>
     <string name="switchPrefKey">switchPrefKey</string>
     
 </resources>
