--- a/AndroidAnnotations/functional-test-1-5/res/layout/checkable_widgets.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/checkable_widgets.xml
@@ -27,6 +27,11 @@
         android:layout_height="wrap_content" />
 
     <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <CheckBox
         android:id="@+id/snake_case_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
