add test for subclasses in @Click

--- a/AndroidAnnotations/functional-test-1-5/res/layout/clickable_widgets.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/clickable_widgets.xml
@@ -27,6 +27,11 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/buttonWithButtonArgument"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
         android:id="@+id/snake_case_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
