add test for subclasses in @EditorAction

--- a/AndroidAnnotations/functional-test-1-5/res/layout/textviews_injected.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/layout/textviews_injected.xml
@@ -66,4 +66,11 @@
 		android:inputType="text"
 		/>
 
+	<EditText
+		android:id="@+id/editText4"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:inputType="text"
+		/>
+
 </LinearLayout>
