Extract RoboGuice plugin

--- a/AndroidAnnotations/androidannotations-core/androidannotations-test/src/main/res/layout/injected.xml
+++ b/AndroidAnnotations/androidannotations-core/androidannotations-test/src/main/res/layout/injected.xml
@@ -25,7 +25,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/roboguice" />
+        android:src="@drawable/icon" />
 
     <TextView
         android:id="@+id/injected_text_view"
